--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   },
   "homepage": "https://github.com/colsen1991/blonde-cmf-starter#readme",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^7.0.0-beta.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
-    "eslint": "^3.18.0",
+    "eslint": "^3.19.0",
     "eslint-config-vue": "^2.0.2",
     "eslint-plugin-vue": "^2.0.1",
     "json-loader": "^0.5.4",
@@ -57,10 +57,12 @@
     "body-parser": "^1.17.1",
     "express": "^5.0.0-alpha.5",
     "promise-polyfill": "^6.0.2",
-    "vue": "^2.2.4",
-    "vue-router": "^2.3.0",
-    "vuex": "^2.2.1",
+    "vue": "^2.3.3",
+    "vue-loader": "^11.3.4",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1",
     "vuex-router-sync": "^4.1.2",
+    "webpack": "^2.5.1",
     "whatwg-fetch": "^2.0.3"
   }
 }
