fix for 409f9ef;

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "export NODE_ENV=test",
     "build": "export NODE_ENV=production && npm run clean && webpack --config webpack.config.prod.js",
     "server": "export NODE_ENV=development && nodemon server/server.js",
-    "frontend": "export NODE_ENV=development && webpack-dev-server --config webpack.config.dev --content-base web/ --hot",
+    "frontend": "export NODE_ENV=development && webpack-dev-server --config webpack.config.dev --content-base web/",
     "dev": "export NODE_ENV=development && pm2 start webpack-dev-server -- --config webpack.config.dev --content-base web/ --hot && pm2 start nodemon -- server/server.js",
     "prod": "export NODE_ENV=production && pm2 start server/server.js",
     "lint": "lint",
