--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     "global-require": 0,
     "no-underscore-dangle": 0,
     "no-confusing-arrow": 0,
-    "new-cap": 0
+    "new-cap": 0,
+    "space-before-function-paren": 0,
+    "semi": 0
   }
 }
