database implementation with sync

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Starter kit for apps that use Blonde CMF",
   "scripts": {
     "test": "export NODE_ENV=test",
-    "build": "export NODE_ENV=production && npm run clean && webpack --config webpack-config-prod",
-    "server": "export NODE_ENV=development && nodemon server/server.js",
+    "build": "export NODE_ENV=production && npm run lint &&  npm run clean && webpack --config webpack-config-prod",
+    "server": "export NODE_ENV=development && node server/server.js",
+    "server-hot": "export NODE_ENV=development && nodemon server/server.js",
     "frontend": "export NODE_ENV=development && webpack-dev-server --config webpack-config-dev --content-base web/",
+    "frontend-hot": "npm run frontend -- --hot",
     "dev": "export NODE_ENV=development && pm2 start webpack-dev-server -- --config webpack-config-dev --content-base web/ --hot && pm2 start nodemon -- server/server.js",
     "prod": "export NODE_ENV=production && pm2 start server/server.js",
     "lint": "eslint server/ web/ utils/",
@@ -49,17 +51,23 @@
     "json-loader": "^0.5.4",
     "nodemon": "^1.11.0",
     "pm2": "^2.4.6",
-    "vue-loader": "^11.1.4",
+    "vue-loader": "^11.3.4",
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^5.0.0-alpha.5",
+    "corser": "^2.0.1",
+    "express": "^4.15.3",
+    "express-pouchdb": "^2.3.7",
+    "express-validator": "^3.2.0",
+    "mkdirp": "^0.5.1",
+    "pouchdb-adapter-memory": "^6.2.0",
+    "pouchdb-browser": "^6.2.0",
+    "pouchdb-node": "^6.2.0",
     "promise-polyfill": "^6.0.2",
     "vue": "^2.3.3",
-    "vue-loader": "^11.3.4",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.1.2",
