--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "no-confusing-arrow": 0,
     "new-cap": 0,
     "space-before-function-paren": 0,
-    "semi": 0
+    "semi": 0,
+    "array-bracket-spacing": 0
   }
 }
